Adding Processing Order to main logic

--- a/force-app/main/default/classes/LoanBalanceService.cls
+++ b/force-app/main/default/classes/LoanBalanceService.cls
@@ -15,15 +15,35 @@ public with sharing class LoanBalanceService {
             loanIds.add(loan.Id);
         }
         
-        // Get all charges for these loans
-        Map<Id, Decimal> totalChargesByLoan = new Map<Id, Decimal>();
-        for (AggregateResult ar : [
-            SELECT Loan__c, SUM(Amount__c) totalCharges
+        // Get all charges for these loans, sorted by date and processing order
+        List<Loan_Charge__c> allCharges = [
+            SELECT Id, Loan__c, Amount__c, Date__c, Charge_Type__c, Processing_Order__c
             FROM Loan_Charge__c
             WHERE Loan__c IN :loanIds
-            GROUP BY Loan__c
-        ]) {
-            totalChargesByLoan.put((Id)ar.get('Loan__c'), (Decimal)ar.get('totalCharges'));
+            ORDER BY Date__c ASC, Processing_Order__c ASC
+        ];
+        
+        // Group charges by loan
+        Map<Id, List<Loan_Charge__c>> chargesByLoan = new Map<Id, List<Loan_Charge__c>>();
+        for (Loan_Charge__c charge : allCharges) {
+            if (!chargesByLoan.containsKey(charge.Loan__c)) {
+                chargesByLoan.put(charge.Loan__c, new List<Loan_Charge__c>());
+            }
+            chargesByLoan.get(charge.Loan__c).add(charge);
+        }
+        
+        // Calculate total charges by loan (respecting processing order)
+        Map<Id, Decimal> totalChargesByLoan = new Map<Id, Decimal>();
+        for (Id loanId : chargesByLoan.keySet()) {
+            Decimal totalCharges = 0;
+            List<Loan_Charge__c> loanCharges = chargesByLoan.get(loanId);
+            
+            // Process charges in order (date ASC, processing_order ASC)
+            for (Loan_Charge__c charge : loanCharges) {
+                totalCharges += (charge.Amount__c != null ? charge.Amount__c : 0);
+            }
+            
+            totalChargesByLoan.put(loanId, totalCharges);
         }
         
         // Get loan details with gross amounts
